# itzi-core

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  release.yml  tests.yml
benchmarks/: benchmark_rastermetrics.py  benchmark_snippets.py  benchmark_solve_q.py  benchmark_surface_flow.py  benchmark_update_h.py  conftest.py  snippets.pyx
scripts/: release_checks.py
src/itzi_core/: __init__.py  array_definitions.py  const.py  data_containers.py  drainage.py  hotstart.py  hydrology.py  infiltration.py  itzi_error.py  massbalance.py  messenger.py  profiler.py  rasterdomain.py  report.py  simulation.py  simulation_builder.py  surfaceflow.py  swmm_input_parser.py
src/itzi_core/compute/: hydrology.pyx  partial_inertia_h.pyx  partial_inertia_q.pyx  rastermetrics.pyx
src/itzi_core/providers/: base.py  csv_output.py  domain_data.py  icechunk_output.py  memory_input.py  memory_output.py  xarray_input.py
tests/: conftest.py  fixtures_vector_output.py  test_5by5.py  test_analytic.py  test_array_definitions.py  test_boundaries.py  test_csv_vector_output.py  test_drainage.py  test_ea8a.py  test_flow.py  test_hotstart_integration.py  test_hotstart_state_loading.py  test_hotstart_timed_inputs.py  test_hotstart_writer_loader.py  test_icechunk_output.py  test_infiltration.py  test_massbalance.py  test_max_values.py  test_memory_input.py  test_rastermetrics.py  test_sloped_channel.py  test_stats.py  test_swmm_hotstart_roundtrip.py  test_wse.py  test_xarray_input.py
tests/ea8b/: conftest.py  helpers.py  test_hotstart.py  test_scenario.py
