[project]
name = "itzi-core"
version = "0.1.0"
description = "A distributed dynamic flood model."
authors = [
    {name = "Laurent Courty", email = "lrntct@gmail.com"},
]
dependencies = [
    "numpy>=2.5",
    "pyswmm>=2.1.0",
    "bmipy>=2.0.1",
    "pydantic>=2.13.4",
]
# 3.12 for typing. pyswmm does not support python > 3.13
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = " LGPL-2.1-or-later"
keywords = ["science", "engineering", "hydrology", "flood", "inundation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.urls]
Homepage = "https://www.itzi.org"
Repository = "https://github.com/ItziModel/itzi-core"
Issues = "https://github.com/ItziModel/itzi-core/issues/"


[project.optional-dependencies]
cloud = [
    "icechunk>=2.0.6",
    "obstore>=0.11.0",
    "pandas>=3.0.3",
    "pyproj>=3.7.2",
    "xarray[io,parallel]>=2026.4.0",
    "zarr>=3.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1",
    "pytest-cov==6.*",
    "pandas>=3.0.3",
    "requests>=2.34",
    "pytest-benchmark[histogram]==5.*",
    "scipy>=1.18",
    "ruff>=0.15",
    "ty>=0.0.55",
    "pyinstrument>=5.1",
    "rioxarray>=0.22.0",
    "prek>=0.4.8",
]

[build-system]
requires = [
    "setuptools>=82",
    "numpy==2.*",
    "cython>=3.2.6"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyx"]
"itzi_core.data" = ["*.ini"]
"itzi_core.data.colortable" = ["*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = ["--import-mode=importlib", "--benchmark-min-rounds=7"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cloud: marks tests using cloud functions (deselect with '-m \"not cloud\"')",
]

[tool.ruff]
line-length = 99

[tool.ty.rules]
# Cython modules are not resolved
unresolved-import = "ignore"
